# finance_tracker

./: .env.dev.template  .env.template  .gitignore  README.md  api.py  compose.yaml  models.py  pyproject.toml  pytest.ini  test_models.py
docker/backend/: .dockerignore  Dockerfile  start.sh
docker/frontend/: Dockerfile
migrations/: env.py
migrations/versions/: 0ccc51a717d9_drop_trans_date_date_type.py  39ea7adff076_add_trans_date_date_type.py  cebeb286cc8e_initial_commit.py
scripts/: generate_dummy_data.py
src/: api.py  dependencies.py  helpers.py  main.py  models.py
src/api/: dependencies.py  helpers.py  main.py  models.py
src/api/routers/: categories.py  reports.py  transactions.py
src/gui/: helpers.py  main.py
src/gui/pages/: categories.py  home.py  transactions.py
src/gui/theme/: theme.py
src/routers/: categories.py  transactions.py
tests/: conftest.py  test_api.py  test_api_categories.py  test_api_main.py  test_api_reports.py  test_api_transactions.py  test_models.py
